# backupmanager

./: Cargo.toml  gen-key.sh
resources/test/: destination.toml  source.toml
src/: backup.rs  config.rs  io.rs  main.rs  manifest.rs  mount.rs  stat.rs
src/compression/: gzip.rs  identity.rs  mod.rs
src/destination/: aws.rs  fd.rs  mod.rs  null.rs
src/encryption/: identity.rs  mod.rs  pgp.rs
src/source/: cephfs.rs  lvm.rs  mod.rs
