[package]
name = "backupmanager"
version = "0.1.0"
authors = ["Aaron Brodersen <aaron@abrodersen.com>"]

[dependencies]
lvm2 =  { path = "../lvm2-rs" }
log = "0.4"
env_logger = "0.5"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
failure = "0.1"
sys-mount = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
tempfile = "3.0"

[dev-dependencies]